@@ -56,7 +56,7 @@ else
 libloris_la_LIBADD = $(top_builddir)/classes/libclasses.la
 endif
 
-libloris_la_LDFLAGS = -version-info 3:5:2 $(EXTRA_LD_FLAGS)
+libloris_la_LDFLAGS = -version-info 3:6:3 $(EXTRA_LD_FLAGS)
 
 nodist_include_HEADERS = loris.h
 
